--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -12,4 +12,9 @@
 	<button (click)="share()">
 		Share
 	</button>
+
+	<app-product-alerts
+		[product]="product"
+		(notify)="onNotify()">
+	</app-product-alerts>
 </div>
